--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Emoji Sudoku Challenge</title>
     <meta property="og:title" content="Joue à mon Emoji Sudoku !">
     <meta property="og:description" content="Peux-tu résoudre ce puzzle ? 3 niveaux de difficulté avec des symboles funs !">
-    <meta property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/thinking-face_1f914.png">
+    <meta property="og:image" content="https://cdn.jsdelivr.net/emojione/assets/png/1f3c6.png">
     
     <style>
         /* --- THEME SOMBRE --- */
