--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         body { 
             font-family: 'Segoe UI', Roboto, sans-serif; 
             /* Fond d'écran sombre */
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1531685218889-7345b7748581?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('logo.pgn');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -162,7 +162,7 @@
 
 <script>
     // --- Configuration & Variables ---
-    const emojis = ['👍', '💥', '🤡', '🔥', '♥️', '😈', '🎉', '🌀', '🌍'];
+    const emojis = ['👍', '🍔', '🎅', '📢', '♥️', '🍟', '🚐', '🌀', '🧺'];
     let solution = [];
     let initialBoard = [];
     let currentBoard = [];
