Bordures de la grille passées en noir pour un meilleur contraste.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             --primary: #9e70ff; 
             --danger: #ff5252; 
             --text: #ffffff;
-            --grid-border: #bb86fc;
-            --subgrid-border: #800080;
-            --cell-gap-color: #333;
+            --grid-border: #000000;
+            --subgrid-border: #000000;
+            --cell-gap-color: #333333;
         }
         
         body { 
