Lignes fines entre cellules passées en jaune vif.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --text: #ffffff;
             --grid-border: #000000;
             --subgrid-border: #000000;
-            --cell-gap-color: #333333;
+            --cell-gap-color: #FFFF00;
         }
         
         body { 
