--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             --danger: #ff5252; 
             --text: #ffffff;
             --grid-border: #000000;
-            --subgrid-border: #000000;
-            --cell-gap-color: #FFFF00;
+            --subgrid-border: #EB3310;
+            --cell-gap-color: #FCFC05;
         }
         
         body { 
