--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         body { 
             font-family: 'Segoe UI', Roboto, sans-serif; 
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('logo.jpn);
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('logo.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
