changement code couleur des lignes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             --primary: #9e70ff; 
             --danger: #ff5252; 
             --text: #ffffff;
-            --grid-border: #000000; /* Bordure extérieure : NOIR PUR */
-            --subgrid-border: #000000; /* Bordures 3x3 : NOIR PUR */
-            --cell-gap-color: #FFFF00; /* Lignes fines entre cellules : JAUNE */
+            --grid-border: #000000; 
+            --subgrid-border: #27E7F5; 
+            --cell-gap-color: #D627F5; 
         }
         
         body { 
