--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
         
         body { 
             font-family: 'Segoe UI', Roboto, sans-serif; 
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('logo.png');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: var(--text); 
+            /* Nouveau fond en gris clair */
+            background: #EEEEEE; 
+            color: #333333; /* Changement de la couleur du texte en sombre pour le contraste */
             display: flex; flex-direction: column; align-items: center; 
             margin: 0; padding: 10px; min-height: 100vh;
         }
