--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         body { 
             font-family: 'Segoe UI', Roboto, sans-serif; 
             /* Nouveau fond en gris clair */
-            background: #EEEEEE; 
+            background: #EBE7E6; 
             color: #333333; /* Changement de la couleur du texte en sombre pour le contraste */
             display: flex; flex-direction: column; align-items: center; 
             margin: 0; padding: 10px; min-height: 100vh;
