--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         body { 
             font-family: 'Segoe UI', Roboto, sans-serif; 
-            /* Nouveau fond en gris clair */
+            /* Nouveau fond en gris clair #EBE7E6 */
             background: #EBE7E6; 
             color: #333333; /* Changement de la couleur du texte en sombre pour le contraste */
             display: flex; flex-direction: column; align-items: center; 
