--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Emoji Sudoku Challenge</title>
-    <meta property="og:title" content="Joue à mon Emoji Sudoku !">
+    <meta property="og:title" content="Joue au Sudoku chez Totof !">
     <meta property="og:description" content="Peux-tu résoudre ce puzzle ? 3 niveaux de difficulté avec des symboles funs !">
     <meta property="og:image" content="https://cdn.jsdelivr.net/emojione/assets/png/1f3c6.png">
     
