--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Emoji Sudoku Challenge</title>
     <meta property="og:title" content="Joue à mon Emoji Sudoku !">
     <meta property="og:description" content="Peux-tu résoudre ce puzzle ? 3 niveaux de difficulté avec des symboles funs !">
-    <meta property="og:image" content="https://cheztotof.github.io/sudoku/burger_frites-removebg-preview-removebg-preview.png?v=2">
+    <meta property="og:image" content="https://cheztotof.github.io/sudoku/sudoku_vignette.png">
     
     <style>
         /* --- THEME CLAIR/VIOLET --- */
