--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             --background-dark: #1a1a1d; /* Fond presque noir */
             --grid-border-neon: #00e0ff; /* Bordure extérieure de grille néon */
             --subgrid-border-neon: #e000ff; /* Bordures 3x3 de grille néon */
-            --cell-gap-neon: 27F527; /* Lignes fines entre cellules (vert) */
+            --cell-gap-neon: #27F527; /* Lignes fines entre cellules (vert) */
             --button-glow: 0 0 8px rgba(0, 224, 255, 0.6), 0 0 16px rgba(0, 224, 255, 0.4);
             --button-glow-hover: 0 0 10px rgba(0, 224, 255, 0.8), 0 0 20px rgba(0, 224, 255, 0.6);
         }
