--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 <script>
     // --- Configuration & Variables ---
-    const emojis = ['🍋', '☕', '🍏', '🧊', '🍟', '🥑', '🍇', '🍔', '🥗'];
+    const emojis = ['🍋', '☕', '🍏', '🧊', '🍟', '🥑', '🍇', '🍔', '🍑'];
     let solution = [];
     let initialBoard = [];
     let currentBoard = [];
