--- a/index.html
+++ b/index.html
@@ -19,22 +19,16 @@
         }
 
         /* --- STYLES GÉNÉRAUX --- */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #000000;
-            color: var(--main-text-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-            /* L'image de fond dépend de votre fichier 'burger_frites-removebg-preview-removebg-preview.png' */
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
+        /* ... (lignes non pertinentes) ... */
+body {
+    /* ... (lignes non pertinentes) ... */
+    box-sizing: border-box;
+    /* L'image de fond dépend de votre fichier 'burger_frites-removebg-preview-removebg-preview.png' */
+    /* background-image: url('burger_frites-removebg-preview-removebg-preview.png'); */
+    /* background-size: cover; */
+    /* background-position: center; */
+    /* background-attachment: fixed; */
+}
 
         /* --- CONTENEURS D'ÉCRAN --- */
         #start-screen, #game-screen {
