--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 <body>
 
     <div id="start-screen">
-        <h1>Emoji Sudoku 🧩</h1>
+        <h1>Emoji Sudoku De Totof 🧩</h1>
         
         <button id="btn-continue" class="btn btn-medium btn-continue" onclick="continueGame()">Continuer la partie</button>
         
@@ -740,7 +740,7 @@
             modal.style.display = 'flex';
             if (win) {
                 title.innerHTML = "🎉 Victoire ! 🎉";
-                msg.textContent = "Bravo, tu as résolu le Emoji Sudoku !";
+                msg.textContent = "Bravo, tu as résolu le Sudoku !";
             } else {
                 title.innerHTML = "☠️ Game Over ☠️";
                 msg.textContent = "Tu as fait 3 erreurs. Retente ta chance !";
