--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             --grid-background: #000000;
 
             /* COULEURS DES CELLULES */
-            --cell-bg-color: #000000; 
+            --cell-bg-color: #CCE3E3; 
             --fixed-cell-bg: #111111; 
             --cell-text-color: #FFFFFF; 
             --cell-fixed-text-color: #AAAAAA; 
