--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             
             /* COULEURS DES BORDURES DE GRILLE (RESTENT BLEU/JAUNE) */
             --grid-main-border-color: var(--neon-blue);
-            --grid-minor-border-color: #EEFC00; 
-            --grid-background: #000000;
+            --grid-minor-border-color: #EBFCCC; 
+            --grid-background: #EBFCCC;
 
             /* COULEURS DES CELLULES */
             --cell-bg-color: #CCE3E3; 
