--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             /* COULEURS DES CELLULES */
             --cell-bg-color: #CCE3E3; 
-            --fixed-cell-bg: #111111; 
-            --cell-text-color: #FFFFFF; 
+            --fixed-cell-bg: #F9FAF7; 
+            --cell-text-color: #F9FAF7; 
             --cell-fixed-text-color: #AAAAAA; 
             
             /* NOUVELLE COULEUR DE SÉLECTION EN BLEU TRÈS CLAIR */
